--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,94 +1,8 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.good-tag {
-  color: #FFFFFF;
-  background: #EC5D29;
-  padding: 5px;
-  margin: -7px 0 -20px -8px;
-  width: 45px;
-  font-size: 11px;
-  position: relative;
-  z-index: 1;
-  border-radius: 5px;
-}
-
-.item-block {
-  width: 42%;
-  font-size: 12px;
-  margin: 2%;
-  padding: 5px 2%;
-  display: inline-block;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.12);
-}
-
-.item-block.right-one {
-  margin: 2% 2% 2% 0;
-}
-
-.item-rows .image-row {
-  text-align: center;
-}
-
-.item-rows image {
-  width: 100px;
-  height: 100px;
-}
-
-.item-rows .name {
+.index-loading {
   width: 100%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space:nowrap;
-  display:inline-block;
-  text-align: center;
+  height: 100%;
 }
-
-.item-rows .lowest-row {
-  font-size: 10px;
-  color: #999999;
-}
-
-.item-rows .price {
-  color: #EC5D29;
-  font-size: 13px;
-  font-weight: bold;
-}
-
-.item-rows .looker-count {
-  display: block;
-  text-align: right;
-  font-size: 10px;
-  color: #999999;
-}
-
-.count-down {
-  font-weight: 600;
-  position: absolute;
-  background: #FFFFFF;
-  color: #333;
-  text-align: center;
-  width: 42%;
-  top: 42%;
-  opacity: .8;
-}
-
-.count-down .unit {
-  font-size: 9px;
-  font-weight: 400;
+.index-loading image {
+  width: 100%;
+  height: 100%;
 }
