--- a/pages/add-address/add-address.wxml
+++ b/pages/add-address/add-address.wxml
@@ -1,7 +1,14 @@
 <view class="container add-address-page">
   <i-input i-class="add-address-input name" value="{{address.name}}" autofocus type="text" maxlength="50" placeholder="收货人姓名" bind:change="bindNameInput"/>
   <i-input i-class="add-address-input phone" value="{{address.phone}}" type="number" maxlength="13" placeholder="手机号码" bind:change="bindPhoneInput" />
-  <i-input i-class="add-address-input district" value="{{address.district}}" type="text" maxlength="50" placeholder="所在地区" bind:change="bindDistrictInput" />
+  <i-input i-class="add-address-input district" value="{{address.areaString}}" type="text" maxlength="50" placeholder="所在地区" bindtap="translate" />
   <i-input i-class="add-address-input address" value="{{address.detail}}" type="textarea" placeholder="请输入详细地址" maxlength="50" bind:change="bindDetailInput" />
   <i-button i-class="save-btn" bind:click="onSaveAddress" size="small">保存</i-button>
+
+<!--modelTest.wxml-->
+<import src="../choose-address/model/model.wxml"/>
+<view class="infoText">{{province}} {{city}} {{county}}</view>
+<template is="areaData" data="{{...item}}"/>
+
 </view>
+
