--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -8,7 +8,7 @@
         <span class="phone bold">{{address.phone}}</span>
       </span>
       <i-cell is-link url="/pages/address/address?isOrder=true" i-class="address-cell">
-        收货地址：<span class="bold">{{address.address}}</span>
+        收货地址：<span class="bold">{{address.province}} {{address.city}} {{address.area}} {{address.address}}</span>
       </i-cell>
     </i-cell-group>
   </view>
