--- a/app.wxss
+++ b/app.wxss
@@ -19,12 +19,23 @@ page {
 
 .price {
   color: #EC5D29;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: bold;
 }
 
 .lowest-row {
-  font-size: 10px;
+  font-size: 11px;
   color: #999999;
 }
 
+.header-background {
+  width: 100%;
+  height: 130px;
+}
+
+.no-look-msg,
+.no-msg {
+  width: 100%;
+  height: 230px;
+  margin-top: 40px;
+}
