--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -1,7 +1,7 @@
 /* pages/address/address.wxss */
 .address-page {
   padding: 0;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .address-block {
@@ -21,7 +21,6 @@
 
 .address-block .left .tag-name {
   line-height: 34px;
-  /* margin-left: 5px; */
   text-align: center;
 }
 
@@ -61,6 +60,9 @@
   position: fixed;
   bottom: 0;
   border: none;
-  font-size: 13px;
-  width: 100%;
+  font-size:16px;
+  width:100%;
+  height:45px;
+  line-height:45px;
+  font-weight:bold;
 }
