--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -23,29 +23,33 @@
   width: 100%;
 }
 
+.items-wrapper {
+  padding: 10px 15px;
+}
+
 .good-tag {
-  color: #FFFFFF;
-  background: #EC5D29;
-  padding: 5px;
-  margin: -7px 0 -20px -8px;
-  width: 45px;
-  font-size: 11px;
-  position: relative;
-  z-index: 1;
-  border-radius: 5px;
+  padding:5px 15px;
+  margin:-20px 0 0px -12px;
+  color:#FFFFFF;
+  background:#EC5D29;
+  border-radius:5px;
+  font-size:12px;
+  z-index:1;
+  position:relative;
+  display: inline-block;
 }
 
 .item-block {
-  width: 42%;
-  font-size: 12px;
-  margin: 2%;
-  padding: 5px 2%;
+  width: 39%;
+  font-size: 14px;
+  margin: 3%;
+  padding: 5px 3%;
   display: inline-block;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.12);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.12);
 }
 
 .item-block.right-one {
-  margin: 2% 2% 2% 0;
+  margin: 3% 3% 3% 0;
 }
 
 .item-rows .image-row {
@@ -59,6 +63,8 @@
 
 .item-rows .name {
   width: 100%;
+  color: #333;
+  font-weight: bold;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space:nowrap;
@@ -67,20 +73,20 @@
 }
 
 .item-rows .lowest-row {
-  font-size: 10px;
+  font-size: 11px;
   color: #999999;
 }
 
 .item-rows .price {
   color: #EC5D29;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: bold;
 }
 
 .item-rows .looker-count {
   display: block;
   text-align: right;
-  font-size: 10px;
+  font-size: 11px;
   color: #999999;
 }
 
@@ -96,6 +102,6 @@
 }
 
 .count-down .unit {
-  font-size: 9px;
+  font-size: 10px;
   font-weight: 400;
 }
