--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -1,26 +1,33 @@
 <!--pages/message/message.wxml-->
 <view class='container'>
   <i-toast id="toast" />
+  <i-spin fix size="large" wx:if="{{spinShow}}"></i-spin>
   <view wx:if="{{hasUserInfo}}">
-    <view class='message-block' wx:for="{{messages}}" wx:key="{{item.id}}">
-      <view class='date'>
-        <text>{{item.transTime}}</text>
-      </view>
-      <view class='good'>
-        <view class='left'>
-          <image src="{{item.goodimg}}"></image>
+    <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
+    <view wx:if="{{messages.length}}">
+      <view class='message-block' wx:for="{{messages}}" wx:key="{{item.id}}">
+        <view class='date'>
+          <text>{{item.transTime}}</text>
         </view>
-        <view class='right'>
-          <p class="block name-row">
-            {{item.goodname}} <button class="tag-btn">抢购结束</button>
-          </p>
-          <p class="block lowest-row"><span class="price">￥ {{item.minPrice}}</span>
-          </p>
+        <view class='good'>
+          <view class='left'>
+            <image src="{{item.goodimg}}"></image>
+          </view>
+          <view class='right'>
+            <p class="block name-row">
+              {{item.goodname}} <button class="tag-btn">抢购结束</button>
+            </p>
+            <p class="block lowest-row"><span class="price">￥ {{item.minPrice}}</span>
+            </p>
+          </view>
+        </view>
+        <view class='message'>
+          <text>{{item.message}}</text>
         </view>
       </view>
-      <view class='message'>
-        <text>{{item.message}}</text>
-      </view>
+    </view>
+    <view wx:if="{{!messages.length && !spinShow}}">
+      <image src="/public/images/no_message.png" class='no-msg' mode="aspectFit"></image>
     </view>
   </view>
 </view>
