--- a/pages/coupon/coupon.wxss
+++ b/pages/coupon/coupon.wxss
@@ -1,1 +1,39 @@
-/* pages/coupon/coupon.wxss */
+.coupons-wrapper {
+  padding: 10rpx 20rpx
+}
+
+.coupon-block {
+  padding: 5px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.12);
+}
+
+.coupon-block .name {
+  font-size: 15px;
+}
+
+.coupon-block .valid-time,
+.coupon-block .description,
+.coupon-block .type {
+  font-size: 12px;
+  color: #999999;
+}
+
+.coupon-block .btn-use {
+  font-size: 12px;
+  color: #ffffff;
+  background: #EC5D29;
+  padding: 3px 5px;
+  border: none;
+  border-radius: 5px; 
+}
+
+.coupon-block .left,
+.coupon-block .right {
+  line-height: 68px;
+  text-align: center;
+}
+
+.coupon-block .price {
+  font-size: 20px;
+  font-weight: bold;
+}
